force-app/main/default/objects/PMC_CPQ_TransactionLog__c/PMC_CPQ_TransactionLog__c.object-meta.xml
<CustomObject>
    <description>This object is used to store transactions details based on SF intergation with external systems.</description>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TRL-{0000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>