force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Error_Category__c</fullName>
    <description>The category of error the integration has failed.</description>
    <label>Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>