force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Error_Message__c</fullName>
    <description>The first error message from the integration response if there are more than 1 errors</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>