force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IntegrationStatus__c</fullName>
    <description>This will show the status of the response of the external callout.</description>
    <label>Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>