force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_InterfaceURL__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InterfaceURL__c</fullName>
    <description>This is the endpoint that was hit during the transaction.</description>
    <label>Interface URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>