force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related quote on which the integration is performed</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Transaction Logs</relationshipLabel>
    <relationshipName>Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>