force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_RequestBody__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestBody__c</fullName>
    <description>This is the request body sent to the external system.</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>