force-app/main/default/objects/PMC_CPQ_TransactionLog__c/fields/PMC_CPQ_ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ResponseBody__c</fullName>
    <description>This field stores the response body of the request made to the external system.</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>