force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/Account_ship_to_Creation1.listView-meta.xml
<ListView>
    <fullName>Account_ship_to_Creation1</fullName>
    <booleanFilter>(1 or 2 or 3 or 4) AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>PMC_CPQ_InterfaceURL__c</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/BPCreation</value>
    </filters>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/BPModification</value>
    </filters>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/ShipToModification</value>
    </filters>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/ShipToCreation</value>
    </filters>
    <filters>
        <field>PMC_CPQ_IntegrationStatus__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Customer Master Operations</label>
</ListView>