force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/CPI_Business_Partner_Operations.listView-meta.xml
<ListView>
    <fullName>CPI_Business_Partner_Operations</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>PMC_CPQ_InterfaceURL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/BPCreation</value>
    </filters>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/BPModification</value>
    </filters>
    <label>SAP Business Partner Operations</label>
</ListView>