force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/Delivery_Request_interface_log_view.listView-meta.xml
<ListView>
    <fullName>Delivery_Request_interface_log_view</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <columns>PMC_CPQ_InterfaceURL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/Inbound/ReceiveDeliveryRequest</value>
    </filters>
    <label>Delivery Request Interface Log View</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>