force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <columns>PMC_CPQ_InterfaceURL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_IntegrationStatus__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Detailed View</label>
</ListView>