force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/Get_price_interface_log_view.listView-meta.xml
<ListView>
    <fullName>Get_price_interface_log_view</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <columns>PMC_CPQ_InterfaceURL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/http/GetPricingDetails</value>
    </filters>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>/services/apexrest/quote/setprices</value>
    </filters>
    <label>Get price Interface Log View</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>