force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/Get_pricing_Interface_Log_View.listView-meta.xml
<ListView>
    <fullName>Get_pricing_Interface_Log_View</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <columns>PMC_CPQ_InterfaceURL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>callout:PMC_CPQ_NamedCredential/http/GetPricingDetails</value>
    </filters>
    <label>Get pricing Interface Log View</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>