force-app/main/default/objects/PMC_CPQ_TransactionLog__c/listViews/Invoice_Interface_Log_View.listView-meta.xml
<ListView>
    <fullName>Invoice_Interface_Log_View</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PMC_CPQ_IntegrationStatus__c</columns>
    <columns>PMC_CPQ_ResponseBody__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_CPQ_InterfaceURL__c</field>
        <operation>equals</operation>
        <value>PMC_CPQ_Invoice__c</value>
    </filters>
    <label>Invoice Interface Log View</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>